--- a/friends/src/component/FriendForm.css
+++ b/friends/src/component/FriendForm.css
@@ -1,16 +1,22 @@
 .new-friend{
-    border-top:black 1px solid;
+    border-bottom:black 1px solid;
     background-color: white;
     position: sticky;
-    bottom:0;
+    top:0;
     width:100%;
-    padding:0 1rem 1rem 1rem;
+    padding:.5rem;
+    z-index: 1;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 form{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    background-color: white;
+    z-index: 1;
 }
 .inputs{
     display:flex;
